Add title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: SKAT-lab
+description: SKAT-LAB, is the Danish Customs and Tax Administration sandbox, for experimenting with software and new technologies
